[package]
name = "esr-codegen"
version = "0.1.0"
authors = ["Maciej Hirsz <maciej.hirsz@gmail.com>"]
license = "MIT/Apache-2.0"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/tzvipm/esr"
documentation = "https://github.com/tzvipm/esr"

[dependencies]
esr = { path = "../esr", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "0.4"
