[package]
name = "esr-transformer"
version = "0.1.0"
edition = "2018"
authors = ["Tzvi Melamed <tzvi@melamed.biz>"]
license = "MIT"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/tzvipm/esr"
documentation = "https://github.com/tzvipm/esr"

[dependencies]
esr = { path = "../esr", version = "0.1.0" }
esr-visitor = { path = "../esr-visitor", version = "0.1.0" }
toolshed = { version = "0.4", features = ["impl_serialize"] }

[dev-dependencies]
pretty_assertions = "0.4"
