[package]
name = "esr-visitor"
version = "0.1.0"
authors = ["Tzvi Melamed <tzvi@melamed.biz>"]
edition = "2018"
license = "MIT"
description = "JavaScript transpiler in Rust"
repository = "https://github.com/tzvipm/esr"
documentation = "https://github.com/tzvipm/esr"

[dependencies]
esr = { path = "../esr", version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "0.4"
